--- a/index.html
+++ b/index.html
@@ -163,9 +163,20 @@
             </li>
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-3.svg" alt="Аватар комментатора фотографии" width="35" height="35">
-               <p class="social__text">Да это фоташоп!!!!!!!!</p>
+              <p class="social__text">Да это фоташоп!!!!!!!!</p>
             </li>
           </ul>
+          <!--Шаблон комментариев к изображению-->
+          <template id="comment-template">
+            <li class="social__comment">
+              <img
+                  class="social__picture"
+                  src="{{аватар}}"
+                  alt="{{имя комментатора}}"
+                  width="35" height="35">
+              <p class="social__text">{{текст комментария}}</p>
+            </li>
+          </template>
 
           <!-- Кнопка для загрузки новой порции комментариев -->
           <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
