--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 <head>
   <script src="pristine/pristine.min.js" type="text/javascript"></script>
+  <script src="nouislider/nouislider.js" type="text/javascript"></script>
   <script type="module" src="/js/main.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="nouislider/nouislider.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
